Activated request merging in order to cut down on the number of separate builds a slave has to execute when it comes back online after being offline for a longer period of time.

--- a/master.cfg
+++ b/master.cfg
@@ -5,6 +5,9 @@
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
 
+# Merge multiple compatible build requests into a single request whenever possible.
+c['mergeRequests'] = True
+
 ####### BUILDSLAVES
 
 import buildslaves
