Updated configuration to support 0.9.15, adjusted building for iOS and Android, numerous other adjustments.

--- a/master.cfg
+++ b/master.cfg
@@ -5,17 +5,19 @@
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
 
-# Merge multiple compatible build requests into a single request whenever possible.
-c['mergeRequests'] = True
+c['buildbotNetUsageData'] = 'none'
 
-####### BUILDSLAVES
+# Collapse multiple compatible build requests into a single request whenever possible.
+c['collapseRequests'] = True
+
+####### WORKERS
 
 import buildslaves
 
-# The 'slaves' list defines the set of recognized buildslaves. Each element is
-# a BuildSlave object, specifying a unique slave name and password.  The same
-# slave name and password must be configured on the slave.
-c['slaves'] = buildslaves.get_slaves()
+# The 'workers' list defines the set of recognized workers. Each element is
+# a Worker object, specifying a unique worker name and password.  The same
+# worker name and password must be configured on the worker.
+c['workers'] = buildslaves.get_slaves()
 
 # 'protocols' contains information about protocols which master will use for
 # communicating with slaves.
@@ -48,14 +50,22 @@ import builders
 # only take place on one slave.
 c['builders'] = builders.get_builders()
 
-####### STATUS TARGETS
+####### BUILDBOT SERVICES
 
 import status
 
-# 'status' is a list of Status Targets. The results of each build will be
-# pushed to these targets. buildbot/status/*.py has a variety to choose from,
-# including web pages, email senders, and IRC bots.
-c['status'] = status.get_status()
+# 'services' is a list of BuildbotService items like reporter targets. The
+# status of each build will be pushed to these targets. buildbot/reporters/*.py
+# has a variety to choose from, like IRC bots.
+
+c['services'] = status.get_github_status()
+
+####### WWW
+
+import status
+
+# minimalistic config to activate new web UI
+c['www'] = status.get_www()
 
 ####### PROJECT IDENTITY
 
