Updated Buildbot configuration to work with 2.x and the current GitHub API.

--- a/master.cfg
+++ b/master.cfg
@@ -5,7 +5,7 @@
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
 
-c['buildbotNetUsageData'] = 'none'
+c['buildbotNetUsageData'] = None
 
 # Collapse multiple compatible build requests into a single request whenever possible.
 c['collapseRequests'] = True
