Update macOS builder and slave names
The macOS version was updated to Big Sur, so the El Capitan doesn't
really make sense anymore.

--- a/private.py.in
+++ b/private.py.in
@@ -5,7 +5,7 @@ port = <port redacted>
 slave_passwords = dict([
 	('unassigned',            '<password redacted>'),
 	('expl0it3r-windows',     '<password redacted>'),
-	('hiura-osx',             '<password redacted>'),
+	('macos',                 '<password redacted>'),
 	('master',                '<password redacted>'),
 	('master-debian-64',      '<password redacted>'),
 	('master-ubuntu-64',      '<password redacted>'),
