Add macOS arm64 builder

--- a/private.py.in
+++ b/private.py.in
@@ -6,7 +6,8 @@ slave_passwords = dict([
 	('unassigned',               '<password redacted>'),
 	('expl0it3r-windows',        '<password redacted>'),
 	('expl0it3r-raspbian-armhf', '<password redacted>'),
-	('macos',                    '<password redacted>'),
+	('macos-64',                 '<password redacted>'),
+	('macos-arm64',              '<password redacted>'),
 	('master',                   '<password redacted>'),
 	('master-debian-64',         '<password redacted>'),
 	('master-ubuntu-64',         '<password redacted>'),
