--- a/private.py.in
+++ b/private.py.in
@@ -11,7 +11,8 @@ slave_passwords = dict([
 	('binary1248-debian',        '<password redacted>'),
 	('binary1248-freebsd-64',    '<password redacted>'),
 	('binary1248-windows',       '<password redacted>'),
-	('binary1248-android',       '<password redacted>')
+	('binary1248-android',       '<password redacted>'),
+	('binary1248-coverity',      '<password redacted>')
 ])
 
 github_client_id = '<client id redacted>'
@@ -19,3 +20,7 @@ github_client_id = '<client id redacted>'
 github_client_secret = '<client secret redacted>'
 
 github_status_token = '<status token redacted>'
+
+coverity_token = '<coverity token redacted>'
+
+coverity_email = '<coverity email redacted>'
