--- a/docker/android/Dockerfile
+++ b/docker/android/Dockerfile
@@ -94,23 +94,23 @@ COPY --from=test-layer /debug-verification.apk /debug-verification.apk
 COPY --from=test-layer /release-verification.apk /release-verification.apk
 
 RUN echo ' \n\
-rm -rf $BUILDBOT_HOME \n\
-mkdir -p $BUILDBOT_HOME \n\
+rm -rf $WORKERHOME \n\
+mkdir -p $WORKERHOME \n\
  \n\
-buildbot-worker create-worker $BUILDBOT_HOME $BUILDBOT_MASTER_HOST:$BUILDBOT_MASTER_PORT $BUILDBOT_WORKER_NAME $BUILDBOT_WORKER_PASSWORD \n\
-echo $BUILDBOT_ADMIN > $BUILDBOT_HOME/info/admin \n\
-echo $BUILDBOT_DESCRIPTION > $BUILDBOT_HOME/info/host \n\
+buildbot-worker create-worker $WORKERHOME $BUILDMASTER:$BUILDMASTER_PORT $WORKERNAME $WORKERPASS \n\
+echo $WORKERADMIN > $WORKERHOME/info/admin \n\
+echo $WORKERDESCRIPTION > $WORKERHOME/info/host \n\
  \n\
-buildbot-worker start --nodaemon $BUILDBOT_HOME \n\
+buildbot-worker start --nodaemon $WORKERHOME \n\
 ' > /start.sh \
     && chmod +x /start.sh
 
-ENV BUILDBOT_HOME=/home/buildbot-worker
-ENV BUILDBOT_ADMIN="Your Name Here <admin@youraddress.invalid>"
-ENV BUILDBOT_DESCRIPTION="Please put a description of this build host here"
-ENV BUILDBOT_MASTER_HOST="masteraddress.invalid"
-ENV BUILDBOT_MASTER_PORT=9989
-ENV BUILDBOT_WORKER_NAME="buildbot-worker-name"
-ENV BUILDBOT_WORKER_PASSWORD="buildbot-worker-password"
+ENV BUILDMASTER="masteraddress.invalid"
+ENV BUILDMASTER_PORT=9989
+ENV WORKERNAME="buildbot-worker-name"
+ENV WORKERPASS="buildbot-worker-password"
+ENV WORKERHOME=/home/buildbot-worker
+ENV WORKERADMIN="Your Name Here <admin@youraddress.invalid>"
+ENV WORKERDESCRIPTION="Please put a description of this build host here"
 
 CMD /start.sh
