--- a/docker/master/Dockerfile
+++ b/docker/master/Dockerfile
@@ -2,6 +2,7 @@ FROM debian:stable-slim
 
 RUN apt-get update && apt-get install --no-install-recommends -y \
     python3-pip \
+    python3-docker \
     python3-setuptools \
     libcairo2 \
     zip \
@@ -9,7 +10,8 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     && apt-get autoremove -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
-    && pip3 install buildbot[bundle] buildbot-badges txrequests
+    && rm /usr/lib/python3.*/EXTERNALLY-MANAGED \
+    && pip3 install "buildbot[bundle]" "sqlalchemy==1.3.24" buildbot-badges txrequests
 
 EXPOSE 9989/tcp
 
