Added support for Android testing.

--- a/docker/android/Dockerfile
+++ b/docker/android/Dockerfile
@@ -20,14 +20,14 @@ RUN DEBIAN_FRONTEND=noninteractive \
     && rm -rf /var/lib/apt/lists/*
 
 # CMake
-RUN wget https://github.com/Kitware/CMake/releases/download/v3.26.3/cmake-3.26.3.tar.gz \
-    && tar xzf cmake-3.26.3.tar.gz \
-    && cd cmake-3.26.3 \
+RUN wget https://github.com/Kitware/CMake/releases/download/v3.30.5/cmake-3.30.5.tar.gz \
+    && tar xzf cmake-3.30.5.tar.gz \
+    && cd cmake-3.30.5 \
     && ./bootstrap --parallel=$(nproc) \
     && make -j $(nproc) install \
     && cmake --version \
     && cd .. \
-    && rm -rf cmake-3.26.3*
+    && rm -rf cmake-3.30.5*
 
 # pipx
 RUN python3 -m pip install --break-system-packages pipx \
@@ -40,15 +40,16 @@ RUN pipx install 'buildbot-worker' \
     && rm -rf ~/.cache
 
 # Gradle
-RUN wget https://services.gradle.org/distributions/gradle-7.3.1-bin.zip \
-    && unzip gradle-7.3.1-bin.zip \
-    && mv gradle-7.3.1 /opt \
+RUN wget https://services.gradle.org/distributions/gradle-8.10.2-bin.zip \
+    && unzip gradle-8.10.2-bin.zip \
+    && mv gradle-8.10.2 /opt \
     && rm -rf gradle-*.zip
 
-ENV PATH="/opt/gradle-7.3.1/bin:$PATH"
+ENV PATH="/opt/gradle-8.10.2/bin:$PATH"
 
 # Android SDK/NDK
 ENV ANDROID_HOME="/opt/android-sdk"
+ENV ANDROID_NDK_VERSION="26.1.10909125"
 
 RUN wget https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip \
     && unzip commandlinetools-linux-7583922_latest.zip \
@@ -59,10 +60,13 @@ RUN wget https://dl.google.com/android/repository/commandlinetools-linux-7583922
 
 ENV PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
 
-RUN echo "y" | sdkmanager --install "ndk;21.4.7075529" \
+RUN echo "y" | sdkmanager --install "ndk;$ANDROID_NDK_VERSION" \
+    && echo "y" | sdkmanager --install "platform-tools" \
     && rm -rf ~/.android/cache
 
-ENV ANDROID_NDK_HOME="/opt/android-sdk/ndk/21.4.7075529"
+ENV PATH="$ANDROID_HOME/platform-tools:$PATH"
+
+ENV ANDROID_NDK_ROOT="/opt/android-sdk/ndk/$ANDROID_NDK_VERSION"
 
 # Test Build
 FROM final-layer as test-layer
@@ -71,20 +75,14 @@ RUN wget https://github.com/SFML/SFML/archive/refs/heads/master.zip \
     && unzip master.zip \
     && cd SFML-master \
     && mkdir build \
-    && sed -i s@\${CMAKE_ANDROID_NDK}/sources/third_party@$PWD/build/install@g CMakeLists.txt \
-    && sed -i s@\${CMAKE_ANDROID_NDK}/sources/third_party@$PWD/build/install@g cmake/Config.cmake \
-    && sed -i s@third_party/sfml@sfml@g examples/android/app/src/main/jni/Android.mk \
-    && sed -i s@third_party/sfml@sfml@g src/SFML/Android.mk \
-    && sed -i s@gradle:3.0.0@gradle:7.0.0@g examples/android/build.gradle \
-    && sed -i s@targetSdkVersion\ 19@targetSdkVersion\ 29@g examples/android/app/build.gradle \
     && cd build \
-    && cmake -DCMAKE_ANDROID_ARCH_ABI=armeabi-v7a -DCMAKE_SYSTEM_NAME=Android -DSFML_BUILD_TEST_SUITE=FALSE -DCMAKE_ANDROID_NDK=$ANDROID_NDK_HOME -DCMAKE_ANDROID_NDK_TOOLCHAIN_VERSION=clang -DCMAKE_ANDROID_STL_TYPE=c++_shared -DCMAKE_ANDROID_API=26 -DCMAKE_BUILD_TYPE=Debug -DBUILD_SHARED_LIBS=TRUE .. && cmake --build . -j8 -- install \
-    && cmake -DCMAKE_ANDROID_ARCH_ABI=armeabi-v7a -DCMAKE_SYSTEM_NAME=Android -DSFML_BUILD_TEST_SUITE=FALSE -DCMAKE_ANDROID_NDK=$ANDROID_NDK_HOME -DCMAKE_ANDROID_NDK_TOOLCHAIN_VERSION=clang -DCMAKE_ANDROID_STL_TYPE=c++_shared -DCMAKE_ANDROID_API=26 -DCMAKE_BUILD_TYPE=Debug -DBUILD_SHARED_LIBS=FALSE .. && cmake --build . -j8 -- install \
-    && cmake -DCMAKE_ANDROID_ARCH_ABI=armeabi-v7a -DCMAKE_SYSTEM_NAME=Android -DSFML_BUILD_TEST_SUITE=FALSE -DCMAKE_ANDROID_NDK=$ANDROID_NDK_HOME -DCMAKE_ANDROID_NDK_TOOLCHAIN_VERSION=clang -DCMAKE_ANDROID_STL_TYPE=c++_shared -DCMAKE_ANDROID_API=26 -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=TRUE .. && cmake --build . -j8 -- install \
-    && cmake -DCMAKE_ANDROID_ARCH_ABI=armeabi-v7a -DCMAKE_SYSTEM_NAME=Android -DSFML_BUILD_TEST_SUITE=FALSE -DCMAKE_ANDROID_NDK=$ANDROID_NDK_HOME -DCMAKE_ANDROID_NDK_TOOLCHAIN_VERSION=clang -DCMAKE_ANDROID_STL_TYPE=c++_shared -DCMAKE_ANDROID_API=26 -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=FALSE .. && cmake --build . -j8 -- install \
+    && cmake -DCMAKE_ANDROID_ARCH_ABI=armeabi-v7a -DCMAKE_SYSTEM_NAME=Android -DSFML_BUILD_TEST_SUITE=TRUE -DCMAKE_ANDROID_NDK=$ANDROID_NDK_ROOT -DCMAKE_ANDROID_NDK_TOOLCHAIN_VERSION=clang -DCMAKE_ANDROID_STL_TYPE=c++_shared -DCMAKE_SYSTEM_VERSION=29 -DCMAKE_BUILD_TYPE=Debug -DBUILD_SHARED_LIBS=TRUE .. && cmake --build . -j8 -- install \
+    && cmake -DCMAKE_ANDROID_ARCH_ABI=armeabi-v7a -DCMAKE_SYSTEM_NAME=Android -DSFML_BUILD_TEST_SUITE=TRUE -DCMAKE_ANDROID_NDK=$ANDROID_NDK_ROOT -DCMAKE_ANDROID_NDK_TOOLCHAIN_VERSION=clang -DCMAKE_ANDROID_STL_TYPE=c++_shared -DCMAKE_SYSTEM_VERSION=29 -DCMAKE_BUILD_TYPE=Debug -DBUILD_SHARED_LIBS=FALSE .. && cmake --build . -j8 -- install \
+    && cmake -DCMAKE_ANDROID_ARCH_ABI=armeabi-v7a -DCMAKE_SYSTEM_NAME=Android -DSFML_BUILD_TEST_SUITE=TRUE -DCMAKE_ANDROID_NDK=$ANDROID_NDK_ROOT -DCMAKE_ANDROID_NDK_TOOLCHAIN_VERSION=clang -DCMAKE_ANDROID_STL_TYPE=c++_shared -DCMAKE_SYSTEM_VERSION=29 -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=TRUE .. && cmake --build . -j8 -- install \
+    && cmake -DCMAKE_ANDROID_ARCH_ABI=armeabi-v7a -DCMAKE_SYSTEM_NAME=Android -DSFML_BUILD_TEST_SUITE=TRUE -DCMAKE_ANDROID_NDK=$ANDROID_NDK_ROOT -DCMAKE_ANDROID_NDK_TOOLCHAIN_VERSION=clang -DCMAKE_ANDROID_STL_TYPE=c++_shared -DCMAKE_SYSTEM_VERSION=29 -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=FALSE .. && cmake --build . -j8 -- install \
     && cd ../examples/android \
-    && NDK_MODULE_PATH=$PWD/../../build/install gradle --stacktrace assembleDebug \
-    && NDK_MODULE_PATH=$PWD/../../build/install gradle --stacktrace assembleRelease \
+    && ./gradlew -p . -P ARCH_ABI=armeabi-v7a -P MIN_SDK=29 --stacktrace assembleDebug \
+    && ./gradlew -p . -P ARCH_ABI=armeabi-v7a -P MIN_SDK=29 --stacktrace assembleRelease \
     && cp app/build/outputs/apk/debug/*-debug.apk /debug-verification.apk \
     && cp app/build/outputs/apk/release/*-release-unsigned.apk /release-verification.apk
 
@@ -115,3 +113,4 @@ ENV WORKERADMIN="Your Name Here <admin@youraddress.invalid>"
 ENV WORKERDESCRIPTION="Please put a description of this build host here"
 
 CMD /start.sh
+
